storage/minio-single-store0/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    app: minio
###
