storage/minio-single-store0/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: storage

spec:
  ports:
    - protocol: TCP
      name: minio
      port: 9000
    - protocol: TCP
      name: minio-console
      port: 9001
  selector:
    app: minio
###
