storage/minio-single-store0/Ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minio
  namespace: storage
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: store0.gxize.local
      http:
        paths:
        - pathType: ImplementationSpecific
          path: /
          backend:
            service:
              name: minio
              port:
                number: 9000
    - host: console.store0.gxize.local
      http:
        paths:
        - pathType: ImplementationSpecific
          path: /
          backend:
            service:
              name: minio
              port:
                number: 9001
  tls:
  - hosts: 
    - store0.gxize.local
    - console.store0.gxize.local
    secretName: tls-minio
###
